# Customer-Intelligence

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  reflection.md  requirements.txt
.github/workflows/: ci.yml
data/samples/: bank_marketing_sample.csv  cfpb_sample.csv
docs/: architecture.md  azure_deployment.md  decision_log.md  demo_script.md  deployment_checklist.md  shap_analysis.py
docs/shap_samples/: segment_error_report.md
faiss_index/: docstore.json
logs/: customer_intel.jsonl
monitoring/: ml_drift.py  rag_monitor.py
monitoring/reports/: ml_drift_report.html  rag_metrics.json
scripts/: ci_eval_gate.py  take_screenshots.py
src/: config.py
src/data_pipeline/: features.py  ingest.py  validate.py
src/rag/: answer.py  build_index.py  rag_eval.py  retrieve.py
src/serving/: model_loader.py  schemas.py  serve.py
src/training/: evaluate.py  train.py
tests/: conftest.py  test_api.py  test_features.py  test_retrieval.py  test_schemas.py  test_validate.py
