[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "customer-intelligence"
version = "0.1.0"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
# Adds project root to sys.path so "from src.x import y" works in tests
pythonpath = ["."]
testpaths = ["tests"]
