[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "customer-intelligence"
version = "0.1.0"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
# Adds project root to sys.path so "from src.x import y" works in tests
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# E/F/W subset: style, undefined names, unused imports.
# E501 (line-length) -- many long comment blocks are intentional.
# E402 (module-import-not-at-top) -- sys.path.insert before project imports is intentional.
select  = ["E", "F", "W"]
ignore  = ["E501", "E402"]
